src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Contract_discount_materials_picklist__c</fullName>
        <label>Contract discount, materials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_discount_pricing_materials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract discount, materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_length__c</fullName>
        <description>Contract length in months</description>
        <label>Contract length (months)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correction_of_sales_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correction of sales needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costumer_Level_on_Contract__c</fullName>
        <label>Costumer Level on Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_until_Expiration__c</fullName>
        <description>Shows the number of days until the Contract end Date. If the contract is in Draft or Expired, the number is set to blank</description>
        <formula>IF( ISPICKVAL( Status ,&quot;Activated&quot;) ,  EndDate - TODAY(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the number of days until the Contract end Date. If the contract is in Draft or Expired, the number is set to blank</inlineHelpText>
        <label>Days until Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deserved_discount_equipment__c</fullName>
        <label>Deserved discount, equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deserved_discount_materials__c</fullName>
        <label>Deserved discount, materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_End_year__c</fullName>
        <inlineHelpText>Discount granted to the customer based on the total sales at the end of the year. Not applied to the order</inlineHelpText>
        <label>Discount End Year</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Discount_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount model</label>
        <referenceTo>Discount_model__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_to_Approve__c</fullName>
        <description>The Discount that needs to be approved. Depending on the value in this field, different individuals might need to approve</description>
        <formula>VALUE(TEXT(Contract_Discount__c))/100 - Max_Approved_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Discount that needs to be approved. Depending on the value in this field, different individuals might need to approve</inlineHelpText>
        <label>Discount to Approve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TFUS-000003033</description>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor, DNA Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Contract_Number__c</fullName>
        <description>Used to enter the Contract ERP Number manually. Needed for contracts that is not integrated and will contain mainly the same information as Movex Contract Number which is today integrated from Movex. The two should be aligned potentially in the future</description>
        <inlineHelpText>Enter the Contract Number from the ERP System</inlineHelpText>
        <label>ERP Contract Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Number__c</fullName>
        <label>ERP Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentTime_Elapsed_Ratio__c</fullName>
        <formula>Contract_Fulfilment__c/Contract_Time_Elapsed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment/Time Elapsed Ratio (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>General_practitioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General practitioner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implant_commitment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Implant commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_commitment_abs__c</fullName>
        <formula>VALUE(TEXT(Implant_commitment_perc_input__c)) *0.01* IF(Implant_forecast__c &gt;0, Implant_forecast__c, Implant_volume_L12M__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implant commitment (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_commitment_perc__c</fullName>
        <formula>IF(
IF( Implant_forecast__c &gt;0, Implant_forecast__c, Implant_volume_L12M__c)
*VALUE(TEXT(Implant_commitment_perc_input__c))*0.01 &gt; IF( General_practitioner__c = true, 14, 29),
VALUE(TEXT(Implant_commitment_perc_input__c))*0.01, 0)</formula>
        <label>Implant commitment (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implant_commitment_perc_input__c</fullName>
        <label>Implant commitment (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                    <isActive>false</isActive>
                    <label>80</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_forecast__c</fullName>
        <inlineHelpText>Only applicable for new customers</inlineHelpText>
        <label>Implant estimation/correction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_volume_L12M__c</fullName>
        <label>Implant volume L12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_volume_L12M_form__c</fullName>
        <formula>Implant_volume_L12M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implant volume L12M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplantsBasisForAllowance__c</fullName>
        <formula>IF(New_customer__c = False &amp;&amp; Correction_of_sales_needed__c = False, Implant_volume_L12M__c, Implant_forecast__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implants: basis for allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implants_sold_first_14_days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Implants sold first 14 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced_Within_Ageement__c</fullName>
        <description>Shows what has been invoiced within Agreement</description>
        <inlineHelpText>Shows what has been invoiced within Agreement</inlineHelpText>
        <label>Invoiced Within Ageement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced_within_agreement_formula__c</fullName>
        <formula>Invoiced_Within_Ageement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced within agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSureSmileCustomer__c</fullName>
        <description>TFUS-000003033</description>
        <label>SureSmile Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_pooled_order_commitment_fulfilled_for__c</fullName>
        <formula>Pooling_period_ended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is pooled order commitment fulfilled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Change_Date__c</fullName>
        <description>The date when the Approval Status last changed</description>
        <inlineHelpText>The date when the Approval Status last changed</inlineHelpText>
        <label>Last Approval Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegalPracticeName__c</fullName>
        <description>TFUS-000003033</description>
        <label>Legal Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Approved_Discount__c</fullName>
        <label>Max Approved Discount (%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_order_value__c</fullName>
        <description>Used for finding the largest order value connected to the contract, in order to check order pooling</description>
        <label>Max_order_value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Movex_Contract_No__c</fullName>
        <description>This field shows the Contract No coming from Movex.</description>
        <inlineHelpText>This field shows the Contract No coming from Movex.</inlineHelpText>
        <label>Movex Contract No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movex_Contract_Type__c</fullName>
        <description>The Contract Type stated in Movex</description>
        <inlineHelpText>The Contract Type stated in Movex</inlineHelpText>
        <label>Movex Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movex_template__c</fullName>
        <description>Used for identifying the corresponding template in Movex based on the contract discount values</description>
        <label>Movex template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_discount_equipment__c</fullName>
        <formula>IF( Previous_contract__r.Deserved_discount_equipment__c - Previous_contract__r.Allowed_discount_Implants_equipment__c &lt; 0, Previous_contract__r.Deserved_discount_equipment__c - Previous_contract__r.Allowed_discount_Implants_equipment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative discount, equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Negative_discount_materials__c</fullName>
        <formula>IF( Previous_contract__r.Deserved_discount_materials__c - Previous_contract__r.Allowed_discount_Implants_materials__c &lt; 0, Previous_contract__r.Deserved_discount_materials__c - Previous_contract__r.Allowed_discount_Implants_materials__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative discount, materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordered_Within_Agreement__c</fullName>
        <description>The Quantity/Value that has been ordered within the Purchasing Agreement</description>
        <inlineHelpText>The Quantity/Value that has been ordered within the Purchasing Agreement</inlineHelpText>
        <label>Ordered Within Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordered_vs_Projected_Target_Value__c</fullName>
        <formula>Ordered_Within_Agreement__c -( Contract_Time_Elapsed__c * Contract_Value_D__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordered vs Projected Target (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordered_within_agreement_formula__c</fullName>
        <formula>Ordered_Within_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordered within agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owners_Managers_Email_DE__c</fullName>
        <description>Sets the owners manager according to the Manager field on the user record. Used for DE 95% contract fulfillment emails. Should not be visible on Page Layout.</description>
        <inlineHelpText>Sets the owners manager according to the Manager field on the user record. Used for DE 95% contract fulfillment emails. Should not be visible on Page Layout.</inlineHelpText>
        <label>Owners Managers Email (DE)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_discount__c</fullName>
        <label>Payment discount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <formula>Account.Payment_Terms_D_JP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pooled_order_commitment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the customer agrees to commit to place a pooled order during the contract period</description>
        <label>Pooled order commitment?</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pooled_order_commitment_formula__c</fullName>
        <formula>Pooled_order_commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pooled order commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pooled_order_commitment_perc__c</fullName>
        <formula>IF(
TEXT(Pooled_order_commitment_perc_input__c) = &quot;10&quot;, 0.1,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, &quot;30&quot;), 0.3,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, &quot;50&quot;), 0.5,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, &quot;100&quot;), 1,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, &quot;&gt;100&quot;), 1.01,0
)))))</formula>
        <label>Pooled order commitment (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pooled_order_commitment_perc_input__c</fullName>
        <label>Pooled order commitment (#)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>&gt;100</fullName>
                </value>
                <value>
                    <fullName>&lt;60%</fullName>
                    <isActive>false</isActive>
                    <label>&lt;60%</label>
                </value>
                <value>
                    <fullName>≥100%</fullName>
                    <isActive>false</isActive>
                    <label>≥100%</label>
                </value>
                <value>
                    <fullName>≥60%</fullName>
                    <isActive>false</isActive>
                    <label>≥60%</label>
                </value>
                <value>
                    <fullName>≥70%</fullName>
                    <isActive>false</isActive>
                    <label>≥70%</label>
                </value>
                <value>
                    <fullName>≥80%</fullName>
                    <isActive>false</isActive>
                    <label>≥80%</label>
                </value>
                <value>
                    <fullName>≥90%</fullName>
                    <isActive>false</isActive>
                    <label>≥90%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pooling_period_ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is pooled order commitment fulfilled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Previous contract</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>The value of the Contract. Used in Vouchers</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromotionalCode__c</fullName>
        <description>TFUS-000003033</description>
        <label>Promotional Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provided_discount_previous_contract__c</fullName>
        <formula>Previous_contract__r.Allowed_discount_Implants_materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provided discount, previous contract (m)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Contract_External_ID__c</fullName>
        <description>This is the primary contract external id. If there is a match between Movex and SFDC in this field the contract or voucher is updated. If not it the other Contract external ID is checked. This is used to cater for the scenario that a Contract (not a Voucher) should never be inserted, while the Voucher can be inserted.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the primary contract external id. If there is a match between Movex and SFDC in this field the contract or voucher is updated. If not it the other Contract external ID is checked. This is used to cater for the scenario that a Contract (not a Vouch</inlineHelpText>
        <label>Purchase Contract External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuarterlyCaseMinimum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TFUS-000003033</description>
        <label>Quarterly Case Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rem_Invoiced_within_Agreement_formula__c</fullName>
        <formula>Remaining_Invoiced_within_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaning Invoiced within Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rem_Ordered_within_Agreement_formula__c</fullName>
        <formula>Remaining_Ordered_within_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaning Ordered within Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Invoiced_within_Agreement__c</fullName>
        <label>Remaining Invoiced Within Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Ordered_within_Agreement__c</fullName>
        <description>Shows how much is remaining to be ordered within the Agreement</description>
        <inlineHelpText>Shows how much is remaining to be ordered within the Agreement</inlineHelpText>
        <label>Remaining Ordered within Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Value__c</fullName>
        <label>Remaining Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_within_Agreement__c</fullName>
        <label>Remaining within Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remains_impl_material__c</fullName>
        <formula>IF( AND(New_customer__c = False, Sales_Correction__c = False, Correction_of_sales_needed__c =false), 
IF((Row_discount_impl_mat__r.Max_perc__c* Implant_volume_L12M__c - Implant_commitment_abs__c )&gt;0, (Row_discount_impl_mat__r.Max_perc__c* Implant_volume_L12M__c - Implant_commitment_abs__c), null), 
IF((Row_discount_impl_mat__r.Max_perc__c* Implant_forecast__c - Implant_commitment_abs__c)&gt;0, (Row_discount_impl_mat__r.Max_perc__c* Implant_forecast__c - Implant_commitment_abs__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remains to next level of discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remains_rev_material__c</fullName>
        <formula>IF( AND(New_customer__c = False , Sales_Correction__c = False, Correction_of_sales_needed__c =false), 
IF((Row_discount_rev_mat__r.Max__c - Sales_L12M__c)&gt;0, (Row_discount_rev_mat__r.Max__c - Sales_L12M__c), null), 
IF((Row_discount_rev_mat__r.Max__c - Revenue_forecast__c)&gt;0, (Row_discount_rev_mat__r.Max__c - Revenue_forecast__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remains to next level of discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_basis_for_allowance__c</fullName>
        <formula>IF(New_customer__c = False &amp;&amp; Sales_Correction__c = False, Sales_L12M__c , Revenue_forecast__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue: basis for allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_forecast__c</fullName>
        <inlineHelpText>Only applicable for new customers</inlineHelpText>
        <label>Sales estimation/correction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Row_discount_impl_mat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Row discount impl mat</label>
        <referenceTo>Discount_row__c</referenceTo>
        <relationshipLabel>Contracts (Row discount impl mat)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_discount_rev_mat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Row discount rev mat</label>
        <referenceTo>Discount_row__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPTemplateDescription__c</fullName>
        <label>Template Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPTemplateID__c</fullName>
        <label>Template ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c), EndDate &gt;= TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>